--- a/css/styles.css
+++ b/css/styles.css
@@ -5580,6 +5580,7 @@ textarea.form-control-lg {
   position: relative;
   flex: 1 1 auto;
   padding: 1rem;
+  color: #904e55;
 }
 
 .modal-footer {
